[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Tom Hu", email = "thomas.hu@sentry.io"},
]
maintainers = [
    {name = "Codecov Support", email = "support@codecov.io"},
]
description = "Codecov Command Line Interface"
dynamic = ["version"]
dependencies = [
    "click==8.*",
    "httpx==0.27.*",
    "ijson==3.*",
    "pyyaml==6.*",
    "regex",
    "responses==0.21.*",
    "sentry-sdk>=2.20.0",
    "test-results-parser==0.5.*",
    "tree-sitter==0.20.*",
    "wrapt>=1.17.2",
]
license = {file = "LICENSE"}
name = "codecov-cli"
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
codecov = "codecov_cli.main:run"
codecovcli = "codecov_cli.main:run"

[tool.setuptools]
packages = ["codecov_cli"]

[tool.setuptools_scm]
version_file = "codecov_cli/_version.py"
