[project]
name = "codecov-cli"
version = "11.2.7"
description = "Codecov Command Line Interface"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    {name = "Tom Hu", email = "thomas.hu@sentry.io"},
]
maintainers = [
    {name = "Codecov Support", email = "support@codecov.io"},
]
requires-python = ">= 3.9"
dependencies = [
    "click>=8.0.0,<8.3.0",
    "ijson==3.*",
    "PyYAML==6.*",
    "requests>=2.25.0",
    "sentry-sdk==2.*",
    "test-results-parser==0.6.1",
]

[dependency-groups]
dev = [
    "pre-commit==3.*",
    "pyinstaller==6.*",
    "pytest==7.*",
    "pytest-cov==4.*",
    "pytest-env==1.*",
    "pytest-mock==3.*",
    "responses==0.21.*",
]

[project.scripts]
codecov = "codecov_cli.main:run"
codecovcli = "codecov_cli.main:run"
codecov-cli = "codecov_cli.main:run"

[project.urls]
Homepage = "https://about.codecov.io"
"CI: GitHub" = "https://github.com/getsentry/prevent-cli/actions/workflows/ci.yml"
"Docs" = "https://docs.codecov.com"
"GitHub: issues" = "https://github.com/getsentry/prevent-cli/issues"
"GitHub: repo" = "https://github.com/getsentry/prevent-cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["codecov_cli"]

[tool.pytest.ini_options]
env = ["CODECOV_ENV=test"]

