[project]
name = "sentry-prevent-cli"
version = "11.2.8"
description = "Sentry Prevent Command Line Interface"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Sentry", email = "oss@sentry.io" }]

requires-python = ">=3.9"
dependencies = [
    "codecov-cli==11.2.8",
    "click>=8.0.0,<8.3.0",
    "sentry-sdk==2.*",
]

[dependency-groups]
dev = [
    "pyinstaller==6.*",
]

[tool.uv.sources]
codecov-cli = { path = "../codecov-cli", editable = true }

[project.scripts]
sentry-prevent-cli = "prevent_cli.main:run"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
